--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -1,19 +1,29 @@
+@import "../../app.scss";
+
 .aboutContainer {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   height: 100vh;
-  padding: 0;
 }
 
 .aboutHeading {
   font-size: 2.5rem;
   margin-bottom: 1rem;
+  width: 32%;
+  text-align: center;
 }
 
 .aboutContent {
   font-size: 1rem;
   width: 70%;
   line-height: 1.6;
+
+  @include mobile {
+    font-size: 0.6rem;
+    width: 100%;
+    line-height: 1.6;
+    padding-left: 8px;
+  }
 }
