--- a/src/components/sidebar/Sidebar.scss
+++ b/src/components/sidebar/Sidebar.scss
@@ -6,6 +6,7 @@
   background-color: #bf128e;
   color: #000000;
   z-index: 1;
+  clip-path: "circle(30px at 50px 50px)";
 
   .bg {
     position: fixed;
